[metadata]
# replace with your username:
name = raepy
version = 0.0.15
author = Roman Baur
author_email = romanbaur.engineering@gmail.com
description = Software drivers for the robot autonomy effector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romzn/raepy
project_urls =
    Bug_Tracker = https://github.com/romzn/raepy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir= 
    =src
packages=find:
python_requires = >=3.6

[options.packages.find]
where = src